# pea1

./: CMakeLists.txt  config.txt
service/: Algorithm.cpp  Algorithm.h  Bruteforce.cpp  Bruteforce.h  ConsolePrinter.cpp  ConsolePrinter.h  FileController.cpp  FileController.h  Filecontroller.h  Graph.cpp  Graph.h  main.cpp
